blurry modal fix #2

--- a/src/scripts/modules/try-mode/react/Try.less
+++ b/src/scripts/modules/try-mode/react/Try.less
@@ -37,11 +37,6 @@
         display: none;
       }
     }
-    .dialog {
-      //FIX OF TRANSLATE BLUR BUG IN CHROME
-      -webkit-font-smoothing: subpixel-antialiased;
-      -webkit-transform: translateZ(0) scale(1.0, 1.0);
-    }
 
     //this should better be in Indigo-ui
     @media (max-height: 765px) {
@@ -174,6 +169,9 @@
   }
 
   &-wizard {
+    //FIX OF TRANSLATE BLUR BUG IN CHROME
+    -webkit-font-smoothing: subpixel-antialiased;
+    -webkit-transform: translateZ(0) scale(1.0, 1.0);
     &.modal {
       h3{
         font-size: 16px;
